--- a/CodeGenerator/package.json
+++ b/CodeGenerator/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-    "build": "tsc"
+    "copy-templates": "yarn copy-templates:server",
+    "copy-templates:server": "cp -r src/ServerGenerator/templates build/ServerGenerator/templates",
+    "build": "tsc && yarn copy-templates"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
@@ -28,6 +30,7 @@
     "typescript": "~3.6.4"
   },
   "dependencies": {
+    "graph-data-structure": "^1.12.1",
     "mustache": "^4.0.1",
     "pg": "^8.3.0"
   }
