--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@faculty/adler-tokens": "^0.0.102",
     "@faculty/adler-web-components": "^0.0.102",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
