--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -19,6 +19,7 @@
     "graph-data-structure": "^1.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.3.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
