--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "devDependencies": {
     "@faculty/eslint-config-base": "^0.0.104",
     "@types/node": "^14.0.27",
-    "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^6.6.0",
@@ -29,6 +28,6 @@
   },
   "dependencies": {
     "@ui-builder/code-generator": "file:packages/CodeGenerator",
-    "@ui-builder/preview-server": "file:packages/PreviewServer"
+    "@ui-builder/server": "file:packages/Server"
   }
 }
