Move types to shared types package

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "packages/Server/client"
   ],
   "version": "independent",
   "npmClient": "yarn",  
