--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "root",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "packages/Server/client"
   ],
   "devDependencies": {
     "@faculty/eslint-config-base": "^0.0.104",
     "@types/node": "^14.0.27",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -24,10 +25,11 @@
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
     "prettycli": "^1.4.3",
-    "typescript": "^4.0.2"
+    "typescript": "~3.7.2"
   },
   "dependencies": {
     "@ui-builder/code-generator": "file:packages/CodeGenerator",
-    "@ui-builder/server": "file:packages/Server"
+    "@ui-builder/server": "file:packages/Server",
+    "@ui-builder/types": "link:packages/Types"
   }
 }
