--- a/packages/CodeGenerator/package.json
+++ b/packages/CodeGenerator/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "eslint-plugin-flowtype": "^5.2.0",
     "graph-data-structure": "^1.12.1",
-    "mustache": "^4.0.1",
-    "uuid": "^8.3.0"
+    "mustache": "^4.0.1"
   }
 }
