--- a/packages/Server/client/package.json
+++ b/packages/Server/client/package.json
@@ -29,9 +29,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "socket.io-client": "^2.3.0",
-    "styled-components": "^5.1.1",
-    "typescript": "~3.7.2",
-    "uuid": "^8.3.0"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -82,6 +80,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
-    "prettycli": "^1.4.3"
+    "prettycli": "^1.4.3",
+    "typescript": "~3.7.2"
   }
 }
