--- a/packages/ExampleApp/tsconfig.json
+++ b/packages/ExampleApp/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "build",
     "sourceMap": true,
     "target": "es6",
+    "jsx": "react",
     "experimentalDecorators": true,
     "esModuleInterop": true
   },
