--- a/packages/Server/client/package.json
+++ b/packages/Server/client/package.json
@@ -71,6 +71,7 @@
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.0",
