--- a/packages/Server/client/package.json
+++ b/packages/Server/client/package.json
@@ -13,13 +13,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "graph-data-structure": "^1.12.1",
     "react": "^16.13.1",
+    "react-ace": "^9.2.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.1",
     "react-redux": "^7.2.1",
