--- a/packages/Server/client/package.json
+++ b/packages/Server/client/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.19.2",
     "color": "^3.1.2",
     "graph-data-structure": "^1.12.1",
@@ -30,7 +31,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "socket.io-client": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,7 +67,6 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/socket.io-client": "^1.4.33",
     "@types/styled-components": "^5.1.2",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^6.6.0",
