--- a/packages/ExampleApp/tsconfig.json
+++ b/packages/ExampleApp/tsconfig.json
@@ -8,6 +8,7 @@
     "target": "es6",
     "jsx": "react",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true
   },
   "compileOnSave": true,
