--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "packages/*",
     "packages/Server/client"
   ],
+  "scripts": {
+    "lerna": "lerna"
+  },
   "devDependencies": {
     "@faculty/eslint-config-base": "^0.0.104",
     "@types/node": "^14.0.27",
