--- a/packages/Server/package.json
+++ b/packages/Server/package.json
@@ -27,6 +27,7 @@
     "@ui-builder/code-generator": "*",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "get-port": "^5.1.1",
     "nodemon": "^2.0.4",
     "socket.io": "^2.3.0",
     "yargs": "^16.0.3"
