--- a/packages/Server/package.json
+++ b/packages/Server/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "get-port": "^5.1.1",
     "nodemon": "^2.0.4",
+    "open": "^7.3.1",
     "socket.io": "^2.3.0",
     "yargs": "^16.0.3"
   },
