--- a/packages/CodeGenerator/package.json
+++ b/packages/CodeGenerator/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "fs-extra": "^9.1.0",
-    "mustache": "^4.0.1",
-    "read-pkg": "^5.2.0"
+    "mustache": "^4.0.1"
   }
 }
