--- a/packages/CodeGenerator/tsconfig.json
+++ b/packages/CodeGenerator/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "build",
     "sourceMap": true,
     "target": "es6",
+    "skipLibCheck": true,
     "experimentalDecorators": true,
     "esModuleInterop": true
   },
