--- a/packages/Server/client/tsconfig.json
+++ b/packages/Server/client/tsconfig.json
@@ -21,7 +21,8 @@
     "jsx": "react",
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
