--- a/packages/Server/tsconfig.json
+++ b/packages/Server/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "build",
     "sourceMap": true,
     "target": "es6",
+    "skipLibCheck": true,
     "esModuleInterop": true
   },
   "compileOnSave": true,
