--- a/packages/Types/tsconfig.json
+++ b/packages/Types/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "build",
     "sourceMap": true,
     "target": "es6",
+    "skipLibCheck": true,
     "esModuleInterop": true
   },
   "compileOnSave": true,
