--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
     "prettycli": "^1.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "3.9.7"
   },
   "dependencies": {
     "@ui-builder/code-generator": "file:packages/CodeGenerator",
