--- a/packages/Server/client/package.json
+++ b/packages/Server/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3002",
   "dependencies": {
+    "@atlaskit/tree": "^8.2.0",
     "@faculty/adler-tokens": "^0.0.120-dev.10",
     "@faculty/adler-web-components": "^0.0.120-dev.10",
     "@material-ui/core": "^4.11.0",
@@ -14,7 +15,6 @@
     "@types/uuid": "^8.3.0",
     "axios": "^0.19.2",
     "color": "^3.1.2",
-    "graph-data-structure": "^1.12.1",
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
