--- a/packages/create-canvas-app/package.json
+++ b/packages/create-canvas-app/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neb42/ui-builder.git"
+    "url": "git+https://github.com/neb42/canvas.git"
   },
   "scripts": {
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
@@ -22,7 +22,7 @@
     "build": "rm -rf build/* && tsc && yarn copy-template"
   },
   "bugs": {
-    "url": "https://github.com/neb42/ui-builder/issues"
+    "url": "https://github.com/neb42/canvas/issues"
   },
   "dependencies": {
     "fs-extra": "^9.1.0",
