--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "canvas-render-engine": "file:packages/render-engine",
-    "canvas-server": "file:packages/server",
-    "canvas-types": "link:packages/types"
+    "canvas-render-engine": "0.1.0",
+    "canvas-server": "0.1.0",
+    "canvas-types": "0.1.0"
   }
 }
