--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canvas-server",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
   "homepage": "https://github.com/neb42/canvas#readme",
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@types/yargs": "^15.0.5",
-    "canvas-render-engine": "0.1.0",
+    "canvas-render-engine": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "get-port": "^5.1.1",
