--- a/package.json
+++ b/package.json
@@ -36,11 +36,7 @@
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
     "prettycli": "^1.4.3",
-    "typescript": "3.9.7"
-  },
-  "dependencies": {
-    "canvas-render-engine": "0.1.0",
-    "canvas-server": "0.1.0",
-    "canvas-types": "0.1.0"
+    "typescript": "3.9.7",
+    "canvas-types": "link:packages/types"
   }
 }
