--- a/packages/typescript/tsconfig.json
+++ b/packages/typescript/tsconfig.json
@@ -8,10 +8,9 @@
     "target": "es6",
     "skipLibCheck": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
