--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "packages/builder/client"
   ],
   "scripts": {
-    "lerna": "lerna"
+    "lerna": "lerna",
+    "build": "lerna run build",
+    "prepublish": "yarn build",
+    "publish": "lerna publish"
   },
   "devDependencies": {
     "@faculty/eslint-config-base": "^0.0.104",
