Rename to ui studio

--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "prettier-eslint": "^11.0.0",
     "prettycli": "^1.4.3",
     "typescript": "3.9.7",
-    "canvas-types": "link:packages/types"
+    "@ui-studio/types": "link:packages/types"
   }
 }
