--- a/packages/builder/client/public/manifest.json
+++ b/packages/builder/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Canvas",
-  "name": "Canvas UI builder",
+  "short_name": "UI Studio",
+  "name": "UI Studio",
   "icons": [
     {
       "src": "favicon-16x16.ico",
