--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canvas-typescript",
+  "name": "@ui-studio/typescript",
   "version": "0.1.2",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
