--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canvas-types",
+  "name": "@ui-studio/types",
   "version": "0.1.2",
   "private": false,
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/types#readme",
