--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "baseUrl": "./packages",
   "paths": {
-    "canvas-render-engine": ["render-engine/src"],
-    "canvas-typescript": ["typescript/src"],
-    "canvas-types": ["types/src"]
+    "@ui-studio/render-engine": ["render-engine/src"],
+    "@ui-studio/typescript": ["typescript/src"],
+    "@ui-studio/types": ["types/src"]
   }
 }
