--- a/packages/render-engine/package.json
+++ b/packages/render-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-studio/render-engine",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/render-engine#readme",
@@ -19,9 +19,9 @@
     "build": "rm -rf build/* && tsc && yarn copy-templates"
   },
   "dependencies": {
+    "@ui-studio/types": "^0.1.3",
+    "@ui-studio/typescript": "^0.1.3",
     "fs-extra": "^9.1.0",
-    "mustache": "^4.0.1",
-    "@ui-studio/typescript": "^0.1.2",
-    "@ui-studio/types": "^0.1.2"
+    "mustache": "^4.0.1"
   }
 }
