--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-studio/builder-client",
-  "version": "0.1.4",
+  "version": "0.1.5-alpha.0",
   "private": true,
   "proxy": "http://localhost:3002",
   "dependencies": {
