--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-studio/builder",
-  "version": "0.1.4",
+  "version": "0.1.5-alpha.0",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/builder#readme",
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@types/yargs": "^15.0.5",
-    "@ui-studio/render-engine": "^0.1.4",
+    "@ui-studio/render-engine": "^0.1.5-alpha.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "get-port": "^5.1.1",
@@ -36,6 +36,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
-    "@types/socket.io": "^2.1.11"
-  }
+    "@types/socket.io": "^2.1.11",
+    "@ui-studio/types": "^0.1.5-alpha.0"
+  },
+  "gitHead": "0b237cd09c5f6c93180ac69d6865192b85664350"
 }
