--- a/packages/create-ui-studio/package.json
+++ b/packages/create-ui-studio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-ui-studio",
-  "version": "0.1.5-alpha.0",
+  "version": "0.1.5",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/create-ui-studio#readme",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@types/yargs": "^16.0.0",
-    "@ui-studio/types": "^0.1.5-alpha.0"
+    "@ui-studio/types": "^0.1.5"
   },
   "gitHead": "0b237cd09c5f6c93180ac69d6865192b85664350"
 }
