--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-studio/types",
-  "version": "0.1.5-alpha.0",
+  "version": "0.1.5",
   "private": false,
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/types#readme",
   "main": "src/index.ts",
