--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -39,5 +39,8 @@
     "@types/socket.io": "^2.1.11",
     "@ui-studio/types": "^0.1.6"
   },
-  "gitHead": "476d3f59f84f3b11ab6c176cc67d2582a65270ff"
+  "publishConfig": {
+    "registry": "https://registry.yarnpkg.com"
+  },
+  "gitHead": "17211150a947ec90d60e1cb637e8b8a1bb7120a0"
 }
