--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "reflect-metadata": "^0.1.13"
   },
-  "gitHead": "476d3f59f84f3b11ab6c176cc67d2582a65270ff"
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "17211150a947ec90d60e1cb637e8b8a1bb7120a0"
 }
