--- a/packages/create-ui-studio/package.json
+++ b/packages/create-ui-studio/package.json
@@ -12,9 +12,6 @@
   "files": [
     "build"
   ],
-  "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/neb42/canvas.git"
@@ -36,5 +33,8 @@
     "@types/yargs": "^16.0.0",
     "@ui-studio/types": "^0.1.6"
   },
-  "gitHead": "476d3f59f84f3b11ab6c176cc67d2582a65270ff"
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "17211150a947ec90d60e1cb637e8b8a1bb7120a0"
 }
