Only publish build dir

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,6 +8,9 @@
     "clean": "rm -rf build/*",
     "build": "yarn clean && tsc"
   },
+  "files": [
+    "build"
+  ],
   "publishConfig": {
     "access": "public"
   },
