--- a/packages/render-engine/package.json
+++ b/packages/render-engine/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/neb42/canvas.git"
   },
+  "files": [
+    "build"
+  ],
   "scripts": {
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "copy-templates": "yarn copy-templates:server && yarn copy-templates:client && yarn copy-templates:client-code",
