--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -43,7 +43,7 @@
     "@ui-studio/types": "^0.1.10"
   },
   "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
+    "access": "public"
   },
-  "gitHead": "66bde8cdc27a9099e0e368be7a29b6496f68ce63"
+  "gitHead": "db6ed76d78c16c206a0bce574fe14900216c921f"
 }
