--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.11",
   "private": false,
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/types#readme",
-  "main": "src/index.ts",
+  "main": "build/index.js",
   "scripts": {
     "clean": "rm -rf build/*",
     "build": "yarn clean && tsc"
