--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/types#readme",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "clean": "rm -rf build/*",
     "build": "yarn clean && tsc"
@@ -14,5 +15,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "db6ed76d78c16c206a0bce574fe14900216c921f"
+  "gitHead": "9030fec9098e03a803e0bd1dfb46833e8dbd7e3d"
 }
