--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-studio/typescript",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/typescript#readme",
@@ -18,8 +18,8 @@
     "build": "rm -rf build/* && tsc"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "@ui-studio/types": "^0.1.13"
+    "@ui-studio/types": "^0.1.13",
+    "reflect-metadata": "^0.1.13"
   },
   "publishConfig": {
     "access": "public"
