--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@types/yargs": "^15.0.5",
     "@ui-studio/render-engine": "^0.1.18",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "get-port": "^5.1.1",
@@ -37,6 +38,7 @@
     "yargs": "^16.0.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/socket.io": "^2.1.11",
