--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -5,8 +5,8 @@
   "proxy": "http://localhost:3002",
   "dependencies": {
     "@atlaskit/tree": "^8.2.0",
-    "@faculty/adler-tokens": "^0.0.120-dev.10",
-    "@faculty/adler-web-components": "^0.0.120-dev.10",
+    "@faculty/adler-tokens": "^0.0.129",
+    "@faculty/adler-web-components": "^0.0.129",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
