--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -79,7 +79,6 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
-    "prettycli": "^1.4.3",
-    "typescript": "~3.7.2"
+    "prettycli": "^1.4.3"
   }
 }
