Add background color to style

--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -17,6 +17,7 @@
     "color": "^3.1.2",
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.3.1",
     "react-redux": "^7.2.1",
@@ -56,6 +57,7 @@
     "@faculty/eslint-config-react": "^0.0.108",
     "@types/axios": "^0.14.0",
     "@types/color": "^3.0.1",
+    "@types/react-color": "^3.0.4",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
