--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "git+https://github.com/neb42/canvas.git"
   },
   "workspaces": [
+    "docs",
     "packages/*",
     "packages/builder/client"
   ],
