--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "scripts": {
     "lerna": "lerna",
     "build": "lerna run build",
-    "prepublish": "yarn build",
-    "publish": "lerna publish"
+    "deploy": "yarn build && lerna publish",
+    "deploy:prepatch": "yarn build && lerna publish prepatch",
+    "deploy:patch": "yarn build && lerna publish patch",
+    "deploy:minor": "yarn build && lerna publish minor",
+    "deploy:major": "yarn build && lerna publish major"
   },
   "devDependencies": {
     "@faculty/eslint-config-base": "^0.0.104",
