--- a/lerna.json
+++ b/lerna.json
@@ -5,5 +5,11 @@
   ],
   "version": "independent",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "preid": "dev",
+      "preDistTag": "dev"
+    }
+  }
 }
