--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ui-studio/types",
-  "version": "0.1.16",
+  "version": "0.1.17-dev.0",
   "private": false,
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/types#readme",
   "main": "build/index.js",
