--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -18,8 +18,7 @@
     "build": "rm -rf build/* && tsc"
   },
   "dependencies": {
-    "@ui-studio/types": "^0.1.20-dev.0",
-    "reflect-metadata": "^0.1.13"
+    "@ui-studio/types": "^0.1.20-dev.0"
   },
   "publishConfig": {
     "access": "public"
