--- a/packages/render-engine/package.json
+++ b/packages/render-engine/package.json
@@ -15,8 +15,7 @@
   ],
   "scripts": {
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "copy-templates": "yarn copy-templates:server && yarn copy-templates:client && yarn copy-templates:client-code",
-    "copy-templates:server": "cp -r src/ServerGenerator/templates build/ServerGenerator/templates",
+    "copy-templates": "yarn copy-templates:client && yarn copy-templates:client-code",
     "copy-templates:client": "cp -r src/ClientGenerator/templates build/ClientGenerator/templates",
     "copy-templates:client-code": "cp -r src/ClientGenerator/code build/ClientGenerator/code",
     "build": "rm -rf build/* && tsc && yarn copy-templates"
