--- a/packages/create-ui-studio/package.json
+++ b/packages/create-ui-studio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-ui-studio",
-  "version": "0.1.27-dev.0",
+  "version": "0.1.27",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
   "homepage": "https://github.com/neb42/canvas/tree/master/packages/create-ui-studio#readme",
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@types/yargs": "^16.0.0",
-    "@ui-studio/types": "^0.1.20-dev.0"
+    "@ui-studio/types": "^0.1.20"
   },
   "publishConfig": {
     "access": "public"
