--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deploy:major": "yarn build && lerna publish major"
   },
   "devDependencies": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@faculty/eslint-config-base": "^0.0.104",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -44,5 +45,8 @@
     "prettier-eslint": "^11.0.0",
     "prettycli": "^1.4.3",
     "typescript": "^4.2.4"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
