--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@atlaskit/tree": "^8.2.0",
     "@faculty/adler-tokens": "^0.0.129",
-    "@faculty/adler-web-components": "^0.0.129",
+    "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
