--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@atlaskit/tree": "^8.2.0",
     "@faculty/adler-tokens": "^0.0.129",
-    "@faculty/adler-web-components": "^0.0.129",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@fontsource/roboto": "^4.5.1",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.51",
+    "@mui/material": "^5.0.4",
+    "@mui/styled-engine-sc": "^5.0.3",
+    "@mui/styles": "^5.0.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^8.3.0",
