--- a/packages/render-engine/package.json
+++ b/packages/render-engine/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.34",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
-  "homepage": "https://github.com/neb42/canvas/tree/master/packages/render-engine#readme",
+  "homepage": "https://github.com/neb42/ui-studio/tree/master/packages/render-engine#readme",
   "license": "MIT",
   "main": "build/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neb42/canvas.git"
+    "url": "git+https://github.com/neb42/ui-studio.git"
   },
   "files": [
     "build"
