--- a/packages/create-ui-studio/package.json
+++ b/packages/create-ui-studio/package.json
@@ -19,17 +19,24 @@
   "scripts": {
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "copy-template": "cp -r src/template build/template",
-    "build": "rm -rf build/* && tsc && yarn copy-template"
+    "build": "rm -rf build/* && tsc && yarn copy-template",
+    "dev": "yarn build && node ./build/index.js  /Users/bmcalindin/workspace/DevApp --template file:../templates/example"
   },
   "bugs": {
     "url": "https://github.com/neb42/ui-studio/issues"
   },
   "dependencies": {
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.merge": "^4.6.2",
     "mustache": "^4.1.0",
+    "tar": "^6.1.11",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
+    "@types/lodash.camelcase": "^4.3.6",
+    "@types/tar": "^6.1.0",
     "@types/yargs": "^16.0.0",
     "@ui-studio/types": "^0.1.26"
   },
