--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "typescript": "^4.2.4"
   },
   "resolutions": {
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
