--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
     "packages/builder",
     "packages/builder/client",
     "packages/create-ui-studio",
+    "packages/create-uis-template",
     "packages/render-engine",
     "packages/templates/example",
     "packages/types",
