--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "packages/builder",
     "packages/builder/client",
     "packages/create-ui-studio",
+    "packages/create-uis-template",
     "packages/render-engine",
     "packages/templates/example",
     "packages/types",
