--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,13 @@
 {
   "packages": [
-    "packages/*",
-    "packages/builder/client"
+    "packages/builder",
+    "packages/builder/client",
+    "packages/create-ui-studio",
+    "packages/create-uis-template",
+    "packages/render-engine",
+    "packages/templates/example",
+    "packages/types",
+    "packages/typescript"
   ],
   "version": "independent",
   "npmClient": "yarn",
