--- a/packages/create-uis-template/package.json
+++ b/packages/create-uis-template/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "create-ui-studio",
-  "version": "0.1.37",
+  "name": "create-uis-template",
+  "version": "0.0.2",
   "description": "> TODO: description",
   "author": "Ben McAlindin <bmcalindin@faculty.ai>",
-  "homepage": "https://github.com/neb42/ui-studio/tree/master/packages/create-ui-studio#readme",
+  "homepage": "https://github.com/neb42/ui-studio/tree/master/packages/create-uis-template#readme",
   "license": "MIT",
   "main": "build/index.js",
   "bin": {
-    "create-ui-studio": "build/index.js"
+    "create-uis-template": "build/index.js"
   },
   "files": [
     "build"
@@ -20,21 +20,17 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "copy-template": "cp -r src/template build/template",
     "build": "rm -rf build/* && tsc && yarn copy-template",
-    "dev": "yarn build && node ./build/index.js /Users/bmcalindin/workspace/DevApp --template file:../templates/example"
+    "dev": "yarn build && node ./build/index.js foo"
   },
   "bugs": {
     "url": "https://github.com/neb42/ui-studio/issues"
   },
   "dependencies": {
     "fs-extra": "^10.0.0",
-    "mustache": "^4.1.0",
-    "tar": "^6.1.11",
-    "yargs": "^16.2.0"
+    "mustache": "^4.1.0"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "@types/tar": "^6.1.0",
-    "@types/yargs": "^16.0.0"
+    "@types/fs-extra": "^9.0.13"
   },
   "publishConfig": {
     "access": "public"
