--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Build + deploy
-        run: yarn deploy:path
+        run: yarn deploy:patch:ci
