--- a/packages/builder/client/package.json
+++ b/packages/builder/client/package.json
@@ -70,6 +70,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "@ui-studio/types": "^0.1.28",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.7.0",
