--- a/docs/src/config/sidebar.yml
+++ b/docs/src/config/sidebar.yml
@@ -31,9 +31,17 @@
     - label: 'Static variables'
       link: '/variables/static'
     - label: 'Function variables'
-      link: '/variables/static'
+      link: '/variables/function'
     - label: 'Lookup variables'
-      link: '/variables/static'
+      link: '/variables/lookup'
+- label: 'Connecting to an API'
+  items:
+    - label: 'Introduction'
+      link: '/api/introduction'
+    - label: 'Fast API'
+      link: '/api/fast-api'
+    - label: 'Custom'
+      link: '/api/custom'
 - label: 'Templates'
   items:
     - label: 'Using templates'
