--- a/docs/package.json
+++ b/docs/package.json
@@ -19,13 +19,16 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
   "keywords": [
     "gatsby",
     "rocketseat",
     "gatsby-starter"
   ],
   "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "build": "gatsby build",
     "start": "gatsby develop",
     "serve": "gatsby serve",
